theme & lang buttons

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <title>ConxiCR Porfoli</title>
+    <div class="container">
+        <p class="trans">Benvinguts a la nostra pagina de proves de JavaScript!</p>
+            <input id="theme" type="button" value="🌞/🌛">
+            <input id="lang" type="button" value="🥘/🍔">
+    </div>
     
 </body>
 </html>
