--- a/index.html
+++ b/index.html
@@ -10,10 +10,21 @@
 <body>
     <title>ConxiCR Porfoli</title>
     <div class="container">
-        <p class="trans">Benvinguts a la nostra pagina de proves de JavaScript!</p>
+        <p class="trans">Hola! Porfolio de ConxiCR</p>
             <input id="theme" type="button" value="🌞/🌛">
             <input id="lang" type="button" value="🥘/🍔">
     </div>
-    
+    <div id="main">
+        <div id="sidebar">
+            <ul>
+                <li><a href="" class="trans">Enllaç 1</a></li>
+                <li><a href="" class="trans">Enllaç 2</a></li>
+                <li><a href="" class="trans">Enllaç 3</a></li>
+                <li><a href="" class="trans">Enllaç 4</a></li>
+                <li><a href="" class="trans">Enllaç 5</a></li>
+            </ul>
+        </div>    
+    </div>
+
 </body>
 </html>
