--- a/index.html
+++ b/index.html
@@ -23,7 +23,33 @@
                 <li><a href="" class="trans">Enllaç 4</a></li>
                 <li><a href="" class="trans">Enllaç 5</a></li>
             </ul>
-        </div>    
+        </div>
+        <div id="sections">
+            <div class="section">
+                <h3>Section 1</h3>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                        adipisci dicta asperiores aperiam iste esse.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                        adipisci dicta asperiores aperiam iste esse.</p>
+            </div>    
+            <div class="section">
+                <h3>Section 2</h3>
+                <img src="http://placekitten.com/200/300" alt="gatito">
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                        adipisci dicta asperiores aperiam iste esse.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                            reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                            adipisci dicta asperiores aperiam iste esse.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                                reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                                adipisci dicta asperiores aperiam iste esse.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                        adipisci dicta asperiores aperiam iste esse.</p>
+            </div>    
     </div>
 
 </body>
