index.html modification(form)

--- a/index.html
+++ b/index.html
@@ -13,44 +13,64 @@
         <p class="trans">Hola! Porfolio de ConxiCR</p>
             <input id="theme" type="button" value="🌞/🌛">
             <input id="lang" type="button" value="🥘/🍔">
-    </div>
-    <div id="main">
-        <div id="sidebar">
-            <ul>
-                <li><a href="" class="trans">Enllaç 1</a></li>
-                <li><a href="" class="trans">Enllaç 2</a></li>
-                <li><a href="" class="trans">Enllaç 3</a></li>
-                <li><a href="" class="trans">Enllaç 4</a></li>
-                <li><a href="" class="trans">Enllaç 5</a></li>
-            </ul>
-        </div>
-        <div id="sections">
-            <div class="section">
-                <h3>Section 1</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
-                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
-                        adipisci dicta asperiores aperiam iste esse.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
-                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
-                        adipisci dicta asperiores aperiam iste esse.</p>
-            </div>    
-            <div class="section">
-                <h3>Section 2</h3>
-                <img src="http://placekitten.com/200/300" alt="gatito">
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
-                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
-                        adipisci dicta asperiores aperiam iste esse.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+    
+        <div id="main">
+            <div id="sidebar">
+                <ul>
+                    <li><a href="" class="trans">Enllaç 1</a></li>
+                    <li><a href="" class="trans">Enllaç 2</a></li>
+                    <li><a href="" class="trans">Enllaç 3</a></li>
+                    <li><a href="" class="trans">Enllaç 4</a></li>
+                    <li><a href="" class="trans">Enllaç 5</a></li>
+                </ul>
+            </div>
+            <div id="sections">
+                <div class="section">
+                    <h3>Section 1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
                             reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
                             adipisci dicta asperiores aperiam iste esse.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                            reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                            adipisci dicta asperiores aperiam iste esse.</p>
+                </div>    
+                <div class="section">
+                    <h3>Section 2</h3>
+                    <img src="http://placekitten.com/200/300" alt="gatito">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                            reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                            adipisci dicta asperiores aperiam iste esse.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
                                 reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
                                 adipisci dicta asperiores aperiam iste esse.</p>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
-                        reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
-                        adipisci dicta asperiores aperiam iste esse.</p>
-            </div>    
-    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                                    reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                                    adipisci dicta asperiores aperiam iste esse.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Excepturi, consequatur. Sint neque
+                            reiciendis modi aut praesentium eos architecto veritatis assumenda. Corrupti repellat itaque, quas
+                            adipisci dicta asperiores aperiam iste esse.</p>
+                </div> 
+            </div>
 
+        </div>
+        <main>
+            <h3>Deja aquí tus comentarios:</h3>
+            <form>
+                 <div class="labels">
+                    <label for="name" class="trans">Nombre: </label>
+                    <label for="email" class="trans">Email: </label>
+                    <label for="comment" class="trans">Comentario: </label>
+                </div>
+                <input type="text" name="name" id="name">
+                <input type="email" name="email" id="email">
+                <textarea name="comment" id="comment" cols="30" rows="10"></textarea>
+                <input type="button" value="Enviar comentario">
+            </form>
+        </main>
+        <footer>
+            <p>copyright 2022 © Conxi Cozar</p>
+        </footer>
+    </div>
+    <script src=""></script>
 </body>
 </html>
